Fix css, bottoni e dark mode finita

--- a/public/css/bulma.extension.css
+++ b/public/css/bulma.extension.css
@@ -2,7 +2,9 @@
 nav {
   margin-bottom: 2rem;
 }
-
+html {
+  touch-action: manipulation;
+}
 /*Fullpage*/
 body {
   min-height: 100%;
@@ -27,7 +29,6 @@ body {
   width: 30vw;
   height: 100px;
   border-radius: 1.5rem;
-  box-shadow: 0px 11px 35px 2px rgba(155, 155, 155, 0.34);
   position: fixed;
   bottom: 8vw;
   left: 0;
@@ -36,6 +37,9 @@ body {
   margin-right: auto;
   background-color: #363636;
   color: #fff;
+}
+.darkModeBtn{
+  background-color: white;
 }
 /*Set the min-width of class="box" used to create receipt*/
 .is-receipt {
